# WeightWellness

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  WeightControl.sln  WeightWatchers.sln  regenerate.bat
Controls/: Controls.vcxproj
Generated2024/: CMakeLists.txt  Generated2024.vcxproj
Generated2024/source/: XmlBonuscell.cpp  XmlBonuscellReader.cpp  XmlBonuscellWriter.cpp  XmlBonuslist.cpp  XmlBonuslistReader.cpp  XmlBonuslistWriter.cpp  XmlClass.cpp  XmlDag.cpp  XmlDagReader.cpp  XmlDagWriter.cpp  XmlHandmatigitem.cpp  XmlHandmatigitemReader.cpp  XmlHandmatigitemWriter.cpp  XmlPersonalia.cpp  XmlPersonaliaReader.cpp  XmlPersonaliaWriter.cpp  XmlPortie.cpp  XmlPortieReader.cpp  XmlPortieWriter.cpp  XmlRecept.cpp  XmlReceptReader.cpp  XmlReceptWriter.cpp  XmlReceptdef.cpp  XmlReceptdefReader.cpp  XmlReceptdefWriter.cpp  XmlReceptdefs.cpp  XmlReceptdefsReader.cpp  XmlReceptdefsWriter.cpp  XmlUnit.cpp  XmlUnitReader.cpp  XmlUnitWriter.cpp  XmlUnits.cpp  XmlUnitsReader.cpp  XmlUnitsWriter.cpp  XmlVoedingsmiddel.cpp  XmlVoedingsmiddelReader.cpp  XmlVoedingsmiddelWriter.cpp  XmlVoedingsmiddeldef.cpp  XmlVoedingsmiddeldefReader.cpp  XmlVoedingsmiddeldefWriter.cpp  (+9 more)
Model/: CMakeLists.txt  Model.vcxproj
Model/header/: FoodDefinitionRepository.h  RecipeRepository.h  UniqueRepository.h  WeekRepository.h
Model/interface/model/: BonusPointsMap.h  CategorieNaam.h  Day.h  Entity.h  FoodDefinitionRepository.cpp  Gerecht.h  GerechtDefinitie.h  IFoodDefinitionRepository.h  ILotFactory.h  IObserver.h  IRecipeRepository.h  IRepository.h  ISubject.h  IWeekRepository.h  Item.h  Lot.h  LotFactory.h  ManualItem.h  MerkNaam.h  Model.h  Naam.h  NutritionalValue.h  Observer.h  Personalia.h  PointsCalculator.h  Portie.h  PortieNaam.h  Recept.h  ReceptDefinitie.h  Repository.h  Subject.h  Unit.h  VoedingsMiddelDefinitionVisitor.h  Voedingsmiddel.h  VoedingsmiddelDefinitie.h  WWDefinitions.h  WWModel.h  Week.h
Model/source/: BonusPointsMap.cpp  CategorieNaam.cpp  Day.cpp  Entity.cpp  FoodDefinitionRepository.cpp  Gerecht.cpp  Lot.cpp  LotFactory.cpp  MerkNaam.cpp  Model.cpp  ModelException.cpp  NutritionalValue.cpp  Observer.cpp  Personalia.cpp  PointsCalculator.cpp  Portie.cpp  PortieNaam.cpp  Recept.cpp  ReceptDefinitie.cpp  RecipeRepository.cpp  Repository.cpp  Subject.cpp  Unit.cpp  Voedingsmiddel.cpp  VoedingsmiddelDefinitie.cpp  WWModel.cpp  Week.cpp
ViewModel/: CMakeLists.txt  ViewModel.vcxproj
ViewModel/header/: Day.h  DayViewModel.h  FoodDefinitionListModel.h  FoodDefinitionModel.h  FoodListModel.h  FoodModel.h  IDayInterface.h  IPrivateDay.h  IPrivateWeek.h  ISettableDay.h  ISettableWeek.h  IViewModelDay.h  IViewModelWeek.h  IWeekInterface.h  PersonalData.h  PortionListModel.h  RecipeListModel.h  RecipeModel.h  ViewModel.h  ViewModelCoordinator.h  ViewModelDay.h  ViewModelUtilities.h  ViewModelWeek.h  Week.h
ViewModel/interface/viewmodel/: Callback.h  IDay.h  IDayViewModel.h  IFoodDefinitionListModel.h  IFoodListModel.h  IPersonalData.h  IRecipeListModel.h  IViewModel.h  IViewModelDay.h  IViewModelWeek.h  IWeek.h  Value.h  ViewModelFactory.h
ViewModel/source/: Day.cpp  DayViewModel.cpp  FoodDefinitionListModel.cpp  FoodListModel.cpp  FoodModel.cpp  PersonalData.cpp  RecipeListModel.cpp  ViewModel.cpp  ViewModelCoordinator.cpp  ViewModelDay.cpp  ViewModelFactory.cpp  ViewModelUtilities.cpp  ViewModelWeek.cpp  Week.cpp
WeightControl/: Analyse.txt  BewegingDialog.h  BonusList.cpp  BrandComboBox.cpp  CMakeLists.txt  CategoryComboBox.cpp  DiaryItemList.h  DiaryPage.cpp  DiaryPage.h  DoubleEdit.cpp  DoubleEdit.h  EditBonusDialog.cpp  EditBonusDialog.h  EditBonuses.cpp  EditBonuses.h  EditFoodDefDialog.cpp  EditFoodDefDialog.h  EditFoodDefState.cpp  EditFoodDefState.h  EditPortieDialog.cpp  EditPortieDialog.h  EditReceptDefDialog.cpp  EditReceptDefDialog.h  EditReceptDialog.cpp  EditReceptDialog.h  EditVoedingsmiddelDialog.cpp  EditVoedingsmiddelDialog.h  FindRecept.cpp  FindRecept.h  FindVoedingsmiddel.cpp  FindVoedingsmiddel.h  HandmatigeItemDlg.cpp  HandmatigeItemDlg.h  ItemEditVisitor.h  ItemList.cpp  ItemList.h  ItemsPage.cpp  ItemsPage.h  MyTabControl.cpp  MyTabControl.h  (+30 more)
WeightControl/Controls/Headers/: BonusList.h  BrandComboBox.h  CategoryComboBox.h  ItemList.h  MyTabControl.h  PortieComboBox.h  PortieList.h  UnitComboBox.h  VMDefinitiesList.h  WWComboBox.h
WeightControl/Controls/Sources/: BonusList.cpp  BrandComboBox.cpp  ComboBox.cpp  DiaryItemList.cpp  MyTabControl.cpp  PortieComboBox.cpp  PortieList.cpp  UnitComboBox.cpp  VMDefinitiesList.cpp  WWComboBox.cpp
WeightControl/Dialogs/Headers/: DiaryPage.h  EditBonuses.h  EditFoodDefDialog.h  EditFoodDialog.h  EditPortieDialog.h  EditReceptDefDialog.h  EditReceptDialog.h  EditVoedingsmiddelDialog.h  FindRecept.h  FindVoedingsmiddel.h  HandmatigeItemDlg.h  ItemsPage.h  PersonaliaDialog.h  PointsPerDay.h  ReceptenPage.h
WeightControl/Dialogs/Sources/: DiaryPage.cpp  EditFoodDefDialog.cpp  EditFoodDialog.cpp  EditPortieDialog.cpp  EditReceptDefDialog.cpp  EditVoedingsmiddelDialog.cpp  FindVoedingsmiddel.cpp  ItemsPage.cpp  NewNameDialog.cpp  ReceptenPage.cpp  WWDialog.cpp
WeightControl/Editor/Headers/: FoodDefinitionEditor.h  FoodEditor.h  IFoodEditor.h  PortieEditor.h  RecipeDefinitionEditor.h
WeightControl/Editor/Sources/: FoodDefinitionEditor.cpp  FoodEditor.cpp  RecipeDefinitionEditor.cpp
WeightControl/Factories/header/: ViewModelFactory.h
WeightControl/Factories/headers/: ViewModelFactory.h
WeightControl/Factories/source/: ViewModelFactory.cpp
WeightControl/General/Headers/: ItemEditVisitor.h  WeightControl.h  stdafx.h
WeightControl/General/Sources/: ItemEditVisitor.cpp  WeightControl.cpp
WeightControl/documents/: ww.txt  ww12.xml
WeightControl/header/: WeightControl.h
WeightControl/source/: WeightControl.cpp
XmlReader2024/: CMakeLists.txt  XmlReader2024.vcxproj
XmlReader2024/source/: XmlReader.cpp
XmlWriter2024/: CMakeLists.txt  XmlWriter2024.vcxproj
XmlWriter2024/header/: XmlItemCreateVisitor.h
XmlWriter2024/source/: XmlItemCreateVisitor.cpp  XmlVMCreateVisitor.cpp  XmlWriter.cpp
(+977 files in other folders)
